# PartTWAP

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  create_test_parquet.cc  parquet_test.cc  parquet_to_turbo.cc  parquet_to_turbo_integration_test.cc  partvwap.cc  partvwap.hh  partvwap_parquet.cc  partvwap_parquet.hh  partvwap_parquet_integration_test.cc  partvwap_parquet_io.cc  partvwap_parquet_test.cc  partvwap_test.cc  partvwap_turbo.cc  partvwap_turbo.hh  perf_counter_scope.hh  perrf_counter_scope_test.cc  run_command_for_test.cc  run_command_for_test.hh  temp_file_for_test.hh  turbo_test.cc
.github/workflows/: cmake_debug_workflow.yaml  cmake_ubsan_workflow.yaml  cmake_workflow.yaml  docker_build_workflow.yaml
cmake/: arrow_interface.cmake  boost_github.cmake  thrift.cmake  turbopfor_interface.cmake
